[gd_scene load_steps=4 format=3 uid="uid://c3o24fe5hsiil"]

[ext_resource type="Script" path="res://Scene/UserInterface/calculations.gd" id="1_iiggt"]
[ext_resource type="StyleBox" uid="uid://b1bvdnbgalbwm" path="res://Ressourcen/Styles/menue_style_box_flat.tres" id="1_rrjc4"]
[ext_resource type="StyleBox" uid="uid://cepxar0wi7s6g" path="res://Ressourcen/Styles/menue_hover_style_box_flat.tres" id="2_sx3js"]

[node name="Calculations" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iiggt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
offset_bottom = 231.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Calculations"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonMeta" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_rrjc4")
theme_override_styles/hover = ExtResource("2_sx3js")
text = "Meta Calcs"

[node name="ButtonMatchup" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_rrjc4")
theme_override_styles/hover = ExtResource("2_sx3js")
text = "Matchup Calcs"

[node name="ButtonDamage" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_rrjc4")
theme_override_styles/hover = ExtResource("2_sx3js")
text = "Damage Calcs"

[node name="ButtonOverview" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_rrjc4")
theme_override_styles/hover = ExtResource("2_sx3js")
text = "Overview"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonBack" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("1_rrjc4")
theme_override_styles/hover = ExtResource("2_sx3js")
text = "Go Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonMeta" to="." method="_on_button_meta_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonMatchup" to="." method="_on_button_matchup_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonDamage" to="." method="_on_button_damage_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonOverview" to="." method="_on_button_overview_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
